# clox

./: .gitignore  CMakeLists.txt  README.md  chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  nob.c  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
testSuite/: .gitignore  conftest.py  generate.py  requirements.txt  utils.py
testSuite/lox/call/: bool.lox  nil.lox  num.lox  string.lox
testSuite/lox/class/: class_as_a_param.lox
testSuite/lox/operator/: add_bool_nil.lox  add_bool_num.lox  add_bool_string.lox  add_nil_nil.lox  add_num_nil.lox  add_string_nil.lox  divide_nonnum_num.lox  divide_num_nonnum.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  greater_or_equal_num_nonnum.lox  less_nonnum_num.lox  less_num_nonnum.lox  less_or_equal_nonnum_num.lox  less_or_equal_num_nonnum.lox  multiply_nonnum_num.lox  multiply_num_nonnum.lox  negate_nonnum.lox  subtract_nonnum_num.lox  subtract_num_nonnum.lox
testSuite/lox/super/: super_in_top_level_function.lox
testSuite/lox/variable/: undefined_global.lox
testSuite/lox/zany/: unexpected_character.lox
